--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -29,19 +29,17 @@
 
 .container-fluid#contribute {
   #visa-heading {
-    background-color: #4D4D4D;
-    background-image: url(asset-path('visa_hero.jpg'));
     background-size: cover;
     background-position: 21% 0;
   }
   header {
-    padding: 2.827rem .707rem;
+    padding: 2.827rem 0;
   }
 }
 
 .row#legend {
 
-  h5 { text-align: center; color: #9B9B9B;}
+  h5 { text-align: center; color: #9B9B9B; margin-top:15px;}
 
   .circle {
     &:before {
@@ -104,12 +102,6 @@
 
   .action-panel {
     height: 300px;
-  }
-
-  .container-fluid#contribute {
-    #visa-heading {
-      padding-bottom: 3.998rem;
-    }
   }
 }
 
@@ -686,4 +678,8 @@
       color: #797979;
     }
   }
+}
+
+#homepage-map {
+  margin-bottom:0;
 }
